--- a/DaysofReactNative/ios/DaysofReactNative/Info.plist
+++ b/DaysofReactNative/ios/DaysofReactNative/Info.plist
@@ -67,6 +67,8 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>HanaleiFill-Regular.ttf</string>
+		<string>KirangHaerang-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
