--- a/DaysofReactNative/android/app/build.gradle
+++ b/DaysofReactNative/android/app/build.gradle
@@ -106,6 +106,8 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        renderscriptTargetApi 23
+        renderscriptSupportModeEnabled true
     }
     splits {
         abi {
@@ -137,6 +139,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-blur')
+    compile project(':react-native-video')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
